SolidSamples_Part2_OCP/app/src/main/java/com/example/solidsamples/bad/kotlin/Types.kt
package com.example.solidsamples.bad.kotlin

/**
 * Created by pieter.snyman on 11/13/17.
 */
data class Circle(val radius: Double)
data class Square(val width: Double, val height: Double)

